--- a/package.json
+++ b/package.json
@@ -6,19 +6,36 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine",
+    "type": "prismic-ts-codegen"
   },
   "dependencies": {
+    "@prismicio/client": "^6.5.1",
+    "@prismicio/helpers": "^2.3.1",
+    "@prismicio/next": "^0.1.3",
+    "@prismicio/react": "^2.4.2",
+    "@prismicio/richtext": "^2.1.0",
+    "@prismicio/slice-simulator-react": "^0.2.2",
+    "clsx": "^1.1.1",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@prismicio/types": "^0.1.29",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "@types/node": "17.0.43",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
+    "postcss": "^8.4.14",
+    "prettier-plugin-tailwindcss": "^0.1.11",
+    "prismic-ts-codegen": "^0.0.4",
+    "slice-machine-ui": "^0.3.8",
+    "tailwindcss": "^3.1.3",
     "typescript": "4.7.3"
   }
 }
