--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -65,10 +65,18 @@
           "blocks": 1
         }
       },
-      "description": {
-        "config": {
-          "patternType": "PARAGRAPH",
-          "blocks": 1
+      "details": {
+        "title": {
+          "config": {
+            "patternType": "HEADING",
+            "blocks": 1
+          }
+        },
+        "description": {
+          "config": {
+            "patternType": "PARAGRAPH",
+            "blocks": 1
+          }
         }
       }
     },
@@ -145,6 +153,25 @@
                 "thumbnail_url": "https://i.ytimg.com/vi/4w77MN75TEs/hqdefault.jpg",
                 "html": "<iframe width=\"200\" height=\"113\" src=\"https://www.youtube.com/embed/4w77MN75TEs?feature=oembed\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen title=\"POWELL PERALTA PRESENTS: PUBLIC DOMAIN\"></iframe>"
               }
+            }
+          }
+        }
+      }
+    },
+    "TitledText": {
+      "default": {
+        "primary": {},
+        "items": {
+          "heading": {
+            "config": {
+              "patternType": "HEADING",
+              "blocks": 1
+            }
+          },
+          "detail": {
+            "config": {
+              "patternType": "PARAGRAPH",
+              "blocks": 1
             }
           }
         }
