--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@prismicio/richtext": "^2.1.0",
     "@prismicio/slice-simulator-react": "^0.2.2",
     "clsx": "^1.1.1",
+    "gsap": "^3.10.4",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swiper": "^8.2.4"
   },
   "devDependencies": {
     "@prismicio/types": "^0.1.29",
