--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prismic-ts-codegen": "^0.0.4",
     "slice-machine-ui": "^0.3.8",
     "tailwindcss": "^3.1.3",
+    "twin.macro": "^3.0.0-rc.3",
     "typescript": "4.7.3"
   }
 }
