--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type": "prismic-ts-codegen"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.5",
     "@prismicio/client": "^6.5.1",
     "@prismicio/helpers": "^2.3.1",
     "@prismicio/next": "^0.1.3",
@@ -31,6 +32,7 @@
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
+    "csstype": "^3.1.0",
     "eslint": "8.17.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
