--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@prismicio/react": "^2.4.2",
     "@prismicio/richtext": "^2.1.0",
     "@prismicio/slice-simulator-react": "^0.2.2",
+    "@tanstack/react-virtual": "^3.0.0-beta.2",
     "clsx": "^1.1.1",
     "gsap": "^3.10.4",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swiper": "^8.2.4"
+    "swiper": "^8.2.4",
+    "underscore": "^1.13.4"
   },
   "devDependencies": {
     "@prismicio/types": "^0.1.29",
@@ -31,6 +33,8 @@
     "@types/node": "17.0.43",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "@types/tailwindcss": "^3.0.11",
+    "@types/underscore": "^1.11.4",
     "autoprefixer": "^10.4.7",
     "csstype": "^3.1.0",
     "eslint": "8.17.0",
