--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "prismic.d.ts", "css.d.ts", "", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "prismic.d.ts", "css.d.ts", "@types/underscore", "", "**/*.ts", "**/*.tsx", "tailwind.config.js"],
   "exclude": ["node_modules"]
 }
