--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/react-virtual": "^3.0.0-beta.2",
     "clsx": "^1.1.1",
     "gsap": "^3.10.4",
+    "jotai": "^1.7.3",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
