--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -198,6 +198,16 @@
       "default": {
         "primary": {}
       }
+    },
+    "Works": {
+      "default": {
+        "primary": {}
+      }
+    },
+    "Work": {
+      "default": {
+        "primary": {}
+      }
     }
   }
 }
