--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "^12.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.0",
     "swiper": "^8.2.4",
     "three": "^0.142.0",
     "underscore": "^1.13.4"
