--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "slicemachine": "start-slicemachine",
     "type": "prismic-ts-codegen",
-    "export": "next build && next export"
+    "export": "next build && next export",
+    "serve": "yarn export && serve ./out"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.5",
@@ -49,6 +50,7 @@
     "postcss": "^8.4.14",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "prismic-ts-codegen": "^0.0.4",
+    "serve": "^14.0.1",
     "slice-machine-ui": "^0.4.0",
     "tailwindcss": "^3.1.3",
     "twin.macro": "^3.0.0-rc.3",
