--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "clsx": "^1.1.1",
     "gsap": "^3.10.4",
     "jotai": "^1.7.3",
-    "next": "^12.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.1.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.0",
     "swiper": "^8.2.4",
     "three": "^0.142.0",
@@ -46,7 +46,7 @@
     "autoprefixer": "^10.4.7",
     "csstype": "^3.1.0",
     "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^13.1.5",
     "postcss": "^8.4.14",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "prismic-ts-codegen": "^0.0.4",
