--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.0",
+    "sharp": "^0.31.3",
     "swiper": "^8.2.4",
     "three": "^0.142.0",
     "underscore": "^1.13.4"
