--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^1.1.1",
     "gsap": "^3.10.4",
     "jotai": "^1.7.3",
+    "maath": "^0.5.2",
     "next": "^13.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
