--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "next-prismic-typescript",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.14.0"
+  },
   "scripts": {
     "dev": "next dev -p 38888",
     "build": "next build",
@@ -41,7 +44,7 @@
   "devDependencies": {
     "@prismicio/types": "^0.1.29",
     "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@types/node": "17.0.43",
+    "@types/node": "^20.14.0",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
     "@types/tailwindcss": "^3.0.11",
