--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@react-three/drei": "^9.17.3",
     "@react-three/fiber": "^8.2.1",
     "@tanstack/react-virtual": "^3.0.0-beta.2",
-    "@types/three": "^0.142.0",
+    "@types/three": "^0.159.0",
     "clsx": "^1.1.1",
     "gsap": "^3.10.4",
     "jotai": "^1.7.3",
@@ -38,7 +38,7 @@
     "react-intersection-observer": "^9.4.0",
     "sharp": "^0.31.3",
     "swiper": "^8.2.4",
-    "three": "^0.142.0",
+    "three": "^0.159.0",
     "underscore": "^1.13.4"
   },
   "devDependencies": {
@@ -54,6 +54,7 @@
     "eslint": "8.17.0",
     "eslint-config-next": "^13.1.5",
     "postcss": "^8.4.14",
+    "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "prismic-ts-codegen": "^0.0.4",
     "serve": "^14.0.1",
