--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,14 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false,
+    "noImplicitAny": false,
+    "strictNullChecks": false,
+    "strictFunctionTypes": false,
+    "strictBindCallApply": false,
+    "strictPropertyInitialization": false,
+    "noImplicitThis": false,
+    "alwaysStrict": false,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
@@ -15,6 +22,15 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "prismic.d.ts", "css.d.ts", "@types/underscore", "", "**/*.ts", "**/*.tsx", "tailwind.config.js"],
+  "include": [
+    "next-env.d.ts",
+    "prismic.d.ts",
+    "css.d.ts",
+    "@types/underscore",
+    "",
+    "**/*.ts",
+    "**/*.tsx",
+    "tailwind.config.js"
+  ],
   "exclude": ["node_modules"]
 }
