設定ファイルと型定義の整備: ESLintとPrettierの設定を更新し、コードスタイルを統一しました。また、TypeScriptの型定義を改善し、コンポーネントのインポート文を整理しました。さらに、カスタムタイプのJSONファイルを修正し、整合性を保ちました。

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,13 @@
 {
-  "trailingComma": "es5",
-  "semi": false,
-  "singleQuote": true
+    "tabWidth": 4,
+    "useTabs": false,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "printWidth": 120,
+    "bracketSpacing": true,
+    "arrowParens": "avoid",
+    "htmlWhitespaceSensitivity": "css",
+    "endOfLine": "lf",
+    "proseWrap": "preserve"
 }
