--- a/package.json
+++ b/package.json
@@ -14,27 +14,26 @@
         "type": "prismic-ts-codegen",
         "export": "next build && next export",
         "serve": "yarn export && serve ./out",
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "clean": "rm -rf .next && rm -rf out && rm -rf node_modules/.cache"
     },
     "dependencies": {
         "@headlessui/react": "^1.6.5",
-        "@prismicio/client": "^6.5.1",
-        "@prismicio/helpers": "^2.3.1",
-        "@prismicio/next": "^0.1.3",
-        "@prismicio/react": "^2.4.2",
+        "@prismicio/client": "^7.19.1",
+        "@prismicio/helpers": "^2.3.9",
         "@prismicio/richtext": "^2.1.0",
         "@prismicio/slice-simulator-react": "^0.2.2",
-        "@react-three/drei": "^9.17.3",
-        "@react-three/fiber": "^8.2.1",
+        "@react-three/drei": "^10.6.1",
+        "@react-three/fiber": "^9.3.0",
         "@tanstack/react-virtual": "^3.0.0-beta.2",
         "@types/three": "^0.159.0",
         "clsx": "^1.1.1",
         "gsap": "^3.10.4",
         "jotai": "^1.7.3",
         "maath": "^0.5.2",
-        "next": "^13.1.5",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "next": "^15.4.6",
+        "react": "^19.1.1",
+        "react-dom": "^19.1.1",
         "react-intersection-observer": "^9.4.0",
         "sharp": "^0.31.3",
         "swiper": "^8.2.4",
@@ -42,11 +41,11 @@
         "underscore": "^1.13.4"
     },
     "devDependencies": {
-        "@prismicio/types": "^0.1.29",
+        "@prismicio/types": "^0.2.9",
         "@tailwindcss/aspect-ratio": "^0.4.0",
         "@types/node": "^20.14.0",
-        "@types/react": "18.0.12",
-        "@types/react-dom": "18.0.5",
+        "@types/react": "^19.1.9",
+        "@types/react-dom": "^19.1.7",
         "@types/tailwindcss": "^3.0.11",
         "@types/underscore": "^1.11.4",
         "autoprefixer": "^10.4.7",
