--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "jsx": "preserve",
-        "incremental": true
+        "incremental": true,
+        "types": ["react", "react-dom"]
     },
     "include": [
         "next-env.d.ts",
