--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     },
     "scripts": {
         "dev": "next dev -p 38888",
-        "build": "npm install --legacy-peer-deps && next build",
+        "build": "npm install && next build",
         "start": "next start",
         "lint": "next lint",
         "slicemachine": "start-slicemachine",
@@ -21,7 +21,6 @@
         "@prismicio/client": "^7.19.1",
         "@prismicio/helpers": "^2.3.9",
         "@prismicio/richtext": "^2.1.0",
-        "@prismicio/slice-simulator-react": "^0.2.2",
         "@radix-ui/react-collapsible": "^1.1.11",
         "@radix-ui/react-dialog": "^1.1.14",
         "@radix-ui/react-select": "^2.2.5",
@@ -43,7 +42,7 @@
         "underscore": "^1.13.4"
     },
     "devDependencies": {
-        "@prismicio/types": "^0.2.9",
+        "@prismicio/types": "^0.1.25",
         "@tailwindcss/aspect-ratio": "^0.4.0",
         "@types/node": "^20.14.0",
         "@types/react": "^19.1.9",
