--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
         "lint": "next lint",
         "slicemachine": "start-slicemachine",
         "type": "prismic-ts-codegen",
-        "export": "next build && next export",
-        "serve": "npm run export && serve ./out",
+        "export": "next build",
+        "serve": "npm run build && serve ./out",
         "format": "prettier --write .",
         "clean": "rm -rf .next && rm -rf out && rm -rf node_modules/.cache"
     },
     "dependencies": {
-        "@prismicio/client": "^7.19.1",
-        "@prismicio/helpers": "^2.3.9",
+        "@prismicio/client": "^6.4.3",
+        "@prismicio/helpers": "^2.1.0",
         "@prismicio/richtext": "^2.1.0",
         "@radix-ui/react-collapsible": "^1.1.11",
         "@radix-ui/react-dialog": "^1.1.14",
@@ -60,7 +60,6 @@
         "serve": "^14.0.1",
         "slice-machine-ui": "^0.4.0",
         "tailwindcss": "^3.3.1",
-        "twin.macro": "^3.0.0-rc.3",
         "typescript": "4.7.3"
     }
 }
