--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "engines": {
-        "node": ">=20.14.0"
+        "node": ">=20.14.0",
+        "npm": ">=10.8.2"
     },
     "scripts": {
         "dev": "next dev -p 38888",
